# AI-JD_Interview_automation

./: .gitignore  README.md  main.py  pyproject.toml  read.md
AI/: backend_main.py  db.py  env.py  jd_backend.py  job_schema.py  llms.py  match_backend.py  prompt.py  qa_prompt.py
API/dashboard/: dashboard.py
API/domain/: domain.py
API/jd/: jds.py
API/login_page/: login.py
API/match_resume/: match.py
API/roles/: roles.py
API/upload_resume/: resume.py
API/users_data/: user.py
database/: config.py  model.py  schema.py
